--- a/_data/reviews/review-srochno-nado--veterinarnaia-klinika-v-moskve-v-zao.yaml
+++ b/_data/reviews/review-srochno-nado--veterinarnaia-klinika-v-moskve-v-zao.yaml
@@ -1,7 +1,7 @@
 ---
 _id: 2d95f9b5ef036ef819a2e1e062111641b539d04c
 name: Aleinne
-comment: Было дело  ветеринарная клиника в Москве в ЗАО искала, в итоге позвонила
+comment: Было дело, я тоже искала ветеринарную клинику в Москве в ЗАО, в итоге позвонила
   <a href="https://doctorpanda24.ru/">https://doctorpanda24.ru/</a>. Все оформили
   быстро, по доступной цене. Всем довольна.
 product: srochno-nado--veterinarnaia-klinika-v-moskve-v-zao
